Got growth block kinda working
BlockGrowth:
Uses the oak_leaves model.
Correctly goes between fast and fancy graphics.
Is not colorized based on biome.
Cannot currently support variants.